# RETRO 2020.10

Tooling

- added a `make image-js` target to generate the image.js
- fixed a bug in the glossary that caused names to appear twice
  (reported by Kiyoshi)
- fixed a bug in retro-describe due to use of a deprecated word

Standard Library

- remove deprecated words

Unix

- added `sys:current-file` to return the filename being processed
- added `sys:current-line` to return the current line number being
  processed