@@ -37,6 +37,9 @@ Execute the quotation if the flag is `FALSE`. If false, also exit the word.
 /                        D: nm-q  A: -  F: -
 Divide `n` by `m` and return the integer part of the quotient.
 
+//                       D: -  A: -  F: -
+Ignore any tokens remaining on the current line. Works with files and the interactive "listener".
+
 /mod                     D: nm-rq  A: -  F: -
 Divide `n` by `m` and return the integer part of the quotient and remainder.
 
