@@ -111,6 +111,13 @@
 </div>
 <p>Divide `n` by `m` and return the integer part of the quotient.</p>
 <table><tr><td><b>Class:</b> </td><td>class:word</td></tr><tr><td><b>Namespace:</b> </td><td>global</td></tr><tr><td><b>Interface Layer:</b> </td><td>all</td></tr></table><hr/>
+<h2>//</h2>
+<div style='margin-left: 1em;'><p><b>Data:</b> -<br>
+<b>Addr:</b> -<br>
+<b>Float:</b> -</p>
+</div>
+<p>Ignore any tokens remaining on the current line. Works with files and the interactive "listener".</p>
+<table><tr><td><b>Class:</b> </td><td>class:word</td></tr><tr><td><b>Namespace:</b> </td><td>global</td></tr><tr><td><b>Interface Layer:</b> </td><td>rre</td></tr></table><hr/>
 <h2>/mod</h2>
 <div style='margin-left: 1em;'><p><b>Data:</b> nm-rq<br>
 <b>Addr:</b> -<br>
