@@ -168,6 +168,17 @@ Divide `n` by `m` and return the integer part of the quotient.
 Class: class:word | Namespace: global | Interface Layer: all
 ------------------------------------------------------------------------
 
+//
+
+  Data:  -
+  Addr:  -
+  Float: -
+
+Ignore any tokens remaining on the current line. Works with files and the interactive "listener".
+
+Class: class:word | Namespace: global | Interface Layer: rre
+------------------------------------------------------------------------
+
 /mod
 
   Data:  nm-rq
